syntax = "proto3";

package hydrosphere.tensorflow;
option cc_enable_arenas = true;
option java_multiple_files = true;
option java_package = "io.hydrosphere.serving.tensorflow";

import "tf/types.proto";
import "tf/tensor_shape.proto";

message TensorInfo {
    string name = 1;
    DataType dtype = 2;
    TensorShapeProto tensor_shape = 3;
}